--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <nav class="bg-gradient-to-t from-transparent to-black/30 w-screen h-20 px-40 z-10 flex justify-between items-center absolute">
-  <a routerLink="/" class="nav-link">Home</a>
-  <a routerLink="/" class="nav-link">Events</a>
-  <a routerLink="/" class="nav-link">Committee</a>
-  <a routerLink="/" class="nav-link">Sponsor</a>
-  <a routerLink="/" class="nav-link">About</a>
+  <a routerLink="" class="nav-link">Home</a>
+  <a routerLink="events" routerLinkActive="active-nav-link" class="nav-link">Events</a>
+  <a routerLink="committee" routerLinkActive="active-nav-link" class="nav-link">Committee</a>
+  <a routerLink="sponsor" routerLinkActive="active-nav-link" class="nav-link">Sponsor</a>
+  <a routerLink="about" routerLinkActive="active-nav-link" class="nav-link">About</a>
   <a href="https://www.astonsu.com/society/computerscience/" target="_blank" class="nav-link">Membership</a>
 </nav>
 <!-- router-outlet is where the route data goes -->
