--- a/src/app/pages/events/events.component.html
+++ b/src/app/pages/events/events.component.html
@@ -3,4 +3,7 @@
     <h1 class="text-5xl">Events</h1>
     <p class="text-2xl">At ACSS we host events weekly, check here to see whats going on!</p>
   </div>
+  <div>
+    <app-event-card image="hello" title="test" description="test"></app-event-card>
+  </div>
 </main>
