--- a/src/app/pages/committee/committee.component.html
+++ b/src/app/pages/committee/committee.component.html
@@ -1,1 +1,16 @@
-<p>committee works!</p>
+<main class="pt-32 flex flex-col justify-center items-center">
+  <div class="h-32 text-(--aston-blue) font-mono text-center">
+    <h1 class="text-5xl">Committee</h1>
+    <p class="text-2xl">Everyone currently involved with ACSS</p>
+  </div>
+  <div class="w-full p-20 flex flex-col items-center gap-y-20 bg-(--aston-blue)">
+    <h1 class="text-4xl">Lead Team</h1>
+    <div class="flex flex-row gap-10">
+      <app-committee-card name="Ben Snaith" image="https://picsum.photos/id/237/200/300" position="Web Developer"></app-committee-card>
+      <app-committee-card name="Ben Snaith" image="https://picsum.photos/id/237/200/300" position="Web Developer"></app-committee-card>
+      <app-committee-card name="Ben Snaith" image="https://picsum.photos/id/237/200/300" position="Web Developer"></app-committee-card>
+      <app-committee-card name="Ben Snaith" image="https://picsum.photos/id/237/200/300" position="Web Developer"></app-committee-card>
+      <app-committee-card name="Ben Snaith" image="https://picsum.photos/id/237/200/300" position="Web Developer"></app-committee-card>
+    </div>
+  </div>
+</main>
